[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/Zlocko.gd" type="Script" id=1]
[ext_resource path="res://Textures/Sprites/LIKOVI/zlocko_wing_001.png" type="Texture" id=2]
[ext_resource path="res://Textures/Sprites/LIKOVI/zlockoSekv_001.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource/name = "clapping"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=2]

length = 3.0
loop = true
step = 0.01

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}

[sub_resource type="Animation" id=5]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=6]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=7]

length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All/zlockoSprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=8]

length = 6.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("All:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.77, 2.02, 2.28, 2.51, 2.78, 3, 3.22, 3.22, 3.4, 3.63, 4.51 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.039063, -80 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0.15052, -80 ), Vector2( 0.15052, -73 ), Vector2( 0.25708, -140 ), Vector2( 0.25708, -137 ), Vector2( 0.25708, -180 ), Vector2( 0.25708, -182 ), Vector2( 0.25708, -178 ), Vector2( 0.25708, -180 ), Vector2( 0.25708, -45 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("All:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.33, 1.76, 2.03, 2.31, 2.55, 2.82, 3.05, 3.25, 3.44, 3.6, 4.51 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -0.352941, -5.9276, 0.0, 0.0, -3.0, 0.0, -2.0, 0.0, -2.0, 0.0, -2.0, -0.352941 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("All/KriloAnchor:transform/rot")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.03, 0.2, 0.77, 1.75, 2.01, 2.24, 2.48, 2.53, 2.77, 2.97, 3.03, 3.17, 3.35, 3.47, 3.56, 4.46, 4.49 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, -18.0, 0.0, 0.0, 0.5, -16.0, 0.0, 0.5, -12.0, 0.0, 0.5, -8.0, 0.0, 0.5, -8.0, 0.0, 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("All/zlockoSprite:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.11, 0.96, 1.59, 1.99, 2.12, 2.64, 3.1, 3.48, 5.79, 5.86 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 2, 1, 1, 2, 3, 4, 5, 5, 1 ]
}

[sub_resource type="Animation" id=9]

length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("All:transform/pos")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.25708, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("All:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.3, 1.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ -0.6, 0.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("All/KriloAnchor:transform/rot")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.2, 0.6, 1, 1.2, 1.7, 2.1, 2.3, 2.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 1.0, -4.0, 0.0, 1.0, -7.0, 0.0, 0.5, -5.5 ]
}

[node name="Zlocko" type="Node2D"]

transform/pos = Vector2( 1561.69, 821.957 )
script/script = ExtResource( 1 )
animationName = "idle"
floatAnimationName = "float"
direction = -1

[node name="SpriteAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/clapping = SubResource( 1 )
anims/counting = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/pointing = SubResource( 4 )
anims/pulling = SubResource( 5 )
anims/snikering = SubResource( 6 )
anims/tea = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="FloatAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/counting = SubResource( 8 )
anims/float = SubResource( 9 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="All" type="Position2D" parent="."]

transform/pos = Vector2( 0.25708, -147.721 )
transform/rot = -1.49321

[node name="KriloAnchor" type="Position2D" parent="All"]

editor/display_folded = true
transform/pos = Vector2( 2.6, -1.3 )
transform/rot = -6.06828

[node name="Krilo" type="Sprite" parent="All/KriloAnchor"]

transform/pos = Vector2( 0.7, -0.3 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
offset = Vector2( 11.5163, -12.0911 )

[node name="zlockoSprite" type="Sprite" parent="All"]

transform/pos = Vector2( -12.0197, 0.0740356 )
texture = ExtResource( 3 )
vframes = 4
hframes = 5
frame = 5


